--- a/src/styles/pages/auth.scss
+++ b/src/styles/pages/auth.scss
@@ -61,4 +61,9 @@
       margin: 15px auto;
     }
   }
+  .btn-chang-container {
+    background-color: transparent;
+    border: none;
+    color: navy;
+  }
 }
